# cube-browser

./: .env.example  .env.tauri  .eslintrc.json  .gitignore  Dockerfile.build  LICENSE  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  railway.toml  tsconfig.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
chrome-extension/: advanced-detection-algorithms.js  advanced-image-processor.js  background-service.js  barcode-qr-scanner.js  content-script-elite.js  content-script-v6-elite.js  content-script-v6.js  content-script.js  document-layout-analyzer.js  dynamic-download-detector.js  excel-parser-secure-worker.js  generate-icons.js  generate-large-icons.js  generate-new-icons.js  icon-generator-enterprise.html  icon-generator-enterprise.js  lendingpad-detector.js  manifest.json  native-messaging-bridge.js  native-messaging-host.json  ocr-engine-tesseract.js  pdf-download-engine-ultimate.js  smart-autofill-engine-v6.js  universal-document-engine-v6.js  universal-parsers-v6.js  welcome.html  welcome.js
components/: AutomationStudio.css  AutomationStudio.tsx  DataExtractor.css  DataExtractor.tsx
hooks/: index.ts  useAnalytics.ts  useAutomation.ts  useCRM.ts  useCubeWebEngine.ts  useEnterpriseServices.ts  useMarketing.ts  useResearch.ts  useSocial.ts  useTelemetry.tsx  useTranslation.ts  useVideoConference.ts
lib/: api-middleware.ts  auth.ts  rate-limiter.ts  sanitize.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/browser/: newtab.html
src-tauri/src/: database.rs  database_schema.rs  lib.rs  ocr.rs
src-tauri/src/autofill/: autofill_tests.rs  mod.rs  mod_v2.rs  tests.rs
src-tauri/src/commands/: admin.rs  admin_affiliates.rs  admin_files.rs  admin_helpdesk.rs  admin_releases.rs  advanced_selector.rs  affiliate_commands.rs  ai.rs  ai_chat.rs  ai_commands.rs  ai_trainer.rs  analytics.rs  api_server.rs  autofill_commands.rs  autofill_system.rs  autofill_system_v2.rs  automation.rs  automation_extended.rs  batch_processing.rs  browser.rs  browser_ai_assistant_commands.rs  browser_bookmarks_commands.rs  browser_collections_commands.rs  browser_commands.rs  browser_downloads_commands.rs  browser_extensions_commands.rs  browser_focus_mode_commands.rs  browser_gestures_commands.rs  browser_history_commands.rs  browser_page_translator_commands.rs  browser_password_generator_commands.rs  browser_pip_commands.rs  browser_privacy_commands.rs  browser_profile_commands.rs  browser_proxy.rs  browser_quick_commands_commands.rs  browser_reader_commands.rs  browser_reading_mode_commands.rs  browser_rss_reader_commands.rs  browser_screenshot_commands.rs  (+138 more)
src-tauri/src/document/: mod.rs  mod_v2.rs
src-tauri/src/models/: collections.rs  downloads.rs  error.rs  ftp.rs  media.rs  mod.rs  notes.rs  passwords.rs  reading_list.rs  security.rs  terminal.rs  video_conference.rs  voip.rs  vpn.rs
src-tauri/src/remote/: mod.rs
src-tauri/src/services/: ai_service.rs  alerts.rs  analytics_service.rs  api_server.rs  audit_logging_service.rs  batch_queue_service.rs  browser_ai_assistant.rs  browser_bookmarks.rs  browser_collections.rs  browser_downloads.rs  browser_extensions.rs  browser_focus_mode.rs  browser_gestures.rs  browser_history.rs  browser_page_translator.rs  browser_password_generator.rs  browser_pip.rs  browser_privacy.rs  browser_proxy.rs  browser_quick_commands.rs  browser_reader.rs  browser_reading_mode.rs  browser_rss_reader.rs  browser_screenshot.rs  browser_search.rs  browser_service.rs  browser_shield.rs  browser_sidebar.rs  browser_site_permissions.rs  browser_smart_clipboard.rs  browser_smart_sessions.rs  browser_speed_dial.rs  browser_split_view.rs  browser_sync.rs  browser_tab_groups.rs  browser_tab_manager.rs  browser_tab_preview.rs  browser_tab_stacks.rs  browser_tab_suspender.rs  browser_themes.rs  (+76 more)
(+1458 files in other folders)
