[package]
name = "cube-nexum"
version = "1.0.0"
description = "CUBE Nexum - Enterprise Browser for Business Automation"
authors = ["CUBE Collective LLC"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Core Tauri & Serialization
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# AI & HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "gzip", "brotli", "deflate", "cookies"], default-features = false }
async-openai = "0.23"

# Email Services (SMTP + SendGrid)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport", "hostname"] }

# IMAP Client (CUBE Mail)
async-imap = "0.9"
async-native-tls = "0.5"
mail-parser = "0.9"
mailparse = "0.15"

# REST API Server & OAuth2
actix-web = "4.4"
actix-cors = "0.7"
oauth2 = "4.4"

# URL encoding
urlencoding = "2.1"

# Stripe Payments
async-stripe = { version = "0.36", features = ["runtime-tokio-hyper-rustls", "webhook-endpoints", "checkout"] }
hmac = "0.12"

# Image Processing
image = "0.25"
base64 = "0.22"

# Screen Capture
screenshots = "0.8"

# Input Control
enigo = "0.2"
rdev = "0.5"

# OCR
tesseract = "0.14"
leptonica-sys = "0.4"

# Document Processing
pdf-extract = "0.7"
calamine = "0.25"
scraper = "0.20"
docx-rs = "0.4"
zip = { version = "2.1", features = ["deflate"] }

# Encryption & Security
ring = "0.17"
data-encoding = "2.5"
rustls = "0.23"
aes-gcm = "0.10"
sha2 = "0.10"
md5 = "0.7"

# WebRTC
webrtc = "0.11"
bytes = "1.7"
tokio-util = { version = "0.7", features = ["codec", "compat"] }

# SSH/SFTP
russh = "0.44"
russh-keys = "0.44"
ssh2 = "0.9"

# FTP
suppaftp = { version = "6.0", features = ["secure", "async-native-tls"] }
async_ftp = "6.0"

# DNS Resolution
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# Docker
bollard = "0.19"

# Browser Automation
headless_chrome = "1.0"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], optional = true }

# CEF (Chromium Embedded Framework) - Full Browser Engine
# Provides: Full Chromium, Widevine DRM, VP9/H.264/AV1 codecs, Chrome extensions
cef = { version = "143.7", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# File System & Monitoring
notify = "6.1"
dirs = "5.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
hex = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
regex = "1"
rand = "0.8"
bincode = "1.3"
open = "5.0"

# License & Cryptography (Enterprise Grade)
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
constant_time_eq = "0.3"
subtle = "2.5"
getrandom = { version = "0.2", features = ["std"] }

# System Information (for device fingerprinting)
sysinfo = "0.31"
mac_address = "1.1"
hostname = "0.4"
whoami = "1.5"

# JWT for license tokens
jsonwebtoken = "9.3"
once_cell = "1.21.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
cef-browser = ["cef", "raw-window-handle"]
default = []
